--- a/public/style.css
+++ b/public/style.css
@@ -5,6 +5,13 @@
 body{
     font-family: 'Roboto';
     font-style: normal;
+
+    height: 100vh;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .telaDeInicio{
@@ -15,8 +22,6 @@ body{
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-
-    margin: 5% auto;
 }
 
 .logoDoInicio{
@@ -64,8 +69,6 @@ body{
 
     position: relative;
 
-    margin: 7% auto;
-
     border: 1px solid black
 }
 
@@ -91,6 +94,7 @@ body{
     bottom: 19.77px;
 }
 
+
 .face{
     width: 100%;
     height: 100%;
@@ -103,10 +107,6 @@ body{
     position: absolute;
     
    
-}
-
-.faceDeTras{
-    transform: rotateY(180deg);
 }
 
 .pergunta{
@@ -196,7 +196,6 @@ body{
     align-items: center;
     justify-content: space-between;
 
-    margin: 20% auto;
 }
 
 .resultado{
@@ -239,8 +238,10 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
+}
 
-    margin: 20% auto;
+.setinha{
+    height: 66px;
 }
 
 .naoAparece{
