--- a/public/style.css
+++ b/public/style.css
@@ -69,9 +69,52 @@ body{
 
     position: relative;
 
-    border: 1px solid black
+    border-radius: 12px;
 }
 
+.cartaPreta{
+    width: 392px;
+    height: 575.75px;
+
+    position: relative;
+
+    border-radius: 12px;
+    border: 5px solid #000000;
+    box-shadow: 0px 8px 24px rgba(0, 0, 0, 0.12);
+}
+
+.cartaVermelha{
+    width: 392px;
+    height: 575.75px;
+
+    position: relative;
+
+    border-radius: 12px;
+    border: 5px solid #F64848;
+    box-shadow: 0px 8px 24px rgba(246, 72, 72, 0.12);
+}
+
+.cartaVerde{
+    width: 392px;
+    height: 575.75px;
+
+    position: relative;
+
+    border-radius: 12px;
+    border: 5px solid #62DB38;
+    box-shadow: 0px 8px 24px rgba(98, 219, 56, 0.12);
+}
+
+.cartaAmarela{
+    width: 392px;
+    height: 575.75px;
+
+    position: relative;
+
+    border-radius: 12px;
+    border: 5px solid #FFEF61;
+    box-shadow: 0px 8px 24px rgba(255, 239, 97, 0.12);
+}
 
 .contador{
     font-size: 18px;
