--- a/public/style.css
+++ b/public/style.css
@@ -14,6 +14,10 @@ body{
     justify-content: center;
 }
 
+button {
+  background-color: #ffffff;
+}
+
 .telaDeInicio{
     width: 345px;
     height: 611px;
